<resources>

    <string name="app_name">Threads Application</string>

    <string name="start_coroutines">Start</string>
    <string name="stop_coroutines">Stop</string>
    <string name="first_coroutine_label">Coroutine #1:</string>
    <string name="second_coroutine_label">Coroutine #2:</string>
    <string name="fourth_coroutine_label">Coroutine #4:</string>
    <string name="third_coroutine_label">Coroutine #3:</string>
    <string name="done">Done</string>
    <string name="finally_done">Finally Done</string>

</resources>
